--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: 谦谦
-subtitle: Hello World
+title: 谦谦成长记
+subtitle: 我要让全世界都知道我很低调
 description:
-author: sxc
+author: s & y
 email:
 language: zh-CN
 
